# StrGraphCPP

./: CMakeLists.txt  README.md  setup.py
example/: example.py
include/: Graph.hpp  Node.hpp  Scheduler.hpp  Util.hpp
include/stringOp/: stringOp.hpp  stringOpFactory.hpp  stringOpRegister.hpp
src/csrc/: Binding.cpp  Graph.cpp  Node.cpp  Scheduler.cpp
src/csrc/stringOp/: ConcateOp.cpp  IOReadOp.cpp  IOWriteOp.cpp  InputOp.cpp  pyStringOp.cpp  stringOpFactory.cpp
test/: GraphTest.py  NodeTest.py  SchedulerTest.py
